--- a/css3/app.css
+++ b/css3/app.css
@@ -11121,5 +11121,119 @@ textarea.form-control-lg {
     display: none !important;
   }
 }
+:root {
+  --font-size: calc((15px + (18 - 15) * ((100vw - 300px) / (1600 - 300))));
+  --font-family-1: "Raleway", sans-serif;
+  --font-family-2: "Open Sans", sans-serif;
+}
+
+.navbar-brand {
+  font-family: var(--font-family-1);
+  font-size: calc(20px + 5 * (100vw - 300px) / 1300);
+}
+
+.nav-link {
+  font-family: var(--font-family-2);
+  font-size: var(--font-size);
+}
+
+.mainsection {
+  margin-top: 35px;
+}
+
+.hero-title {
+  font-size: calc(25px + 20 * (100vw - 300px) / 1300);
+  font-family: "Raleway", sans-serif;
+  text-transform: capitalize;
+  line-height: 63px;
+  margin-bottom: 56px;
+  font-weight: 700;
+  letter-spacing: 0.2rem;
+}
+
+.main-text {
+  font-size: var(--font-size);
+  text-align: start;
+  letter-spacing: 0.08rem;
+  word-spacing: 0.128rem;
+  line-height: calc(var(--font-size) * 1.8);
+  font-family: var(--font-family-2);
+  margin-bottom: 56px;
+}
+
+.btn {
+  padding: 10px 0px;
+  font-weight: 600;
+  font-family: var(--font-family-1);
+}
+
+.sec-title {
+  font-size: calc(20px + 10 * (100vw - 300px) / 1300);
+}
+
+.image_bg {
+  background-image: url(../images/blob.svg);
+  background-size: cover;
+  background-position: center;
+  width: 100%;
+  height: 550px;
+  padding: 20px;
+  z-index: 99;
+}
+
+.png {
+  border-radius: 5%;
+  width: 60%;
+}
+
+.pattern_top {
+  position: absolute;
+  display: block;
+  background-color: white;
+  width: 25%;
+  top: 0;
+  right: 0;
+  height: 25%;
+  background-image: radial-gradient(black 5px, transparent 5px);
+  background-size: 15px 15px;
+  clip-path: polygon(0 0, 100% 0, 100% 100%, 72% 100%, 72% 32%, 0 32%);
+}
+
+.pattern_bottom {
+  position: absolute;
+  display: block;
+  background-color: white;
+  width: 25%;
+  bottom: 0;
+  left: 0;
+  height: 25%;
+  background-image: radial-gradient(black 5px, transparent 5px);
+  background-size: 15px 15px;
+  clip-path: polygon(28% 0, 28% 70%, 100% 70%, 100% 100%, 0 100%, 0 0);
+}
+
+.nav_icons > i {
+  font-size: 18px;
+}
+
+@media (max-width: 767.98px) {
+  .png {
+    width: 65%;
+  }
+}
+@media (max-width: 575.98px) {
+  .png {
+    width: 100%;
+  }
+
+  .image_bg {
+    background-image: none;
+    height: max-content;
+  }
+
+  .main-text {
+    text-indent: 2.5rem;
+  }
+}
 
 /*# sourceMappingURL=app.css.map */
