--- a/css4/app.css
+++ b/css4/app.css
@@ -7,7 +7,7 @@
  */
 @import "../node_modules/animate.css/animate.min.css";
 @import "../node_modules/@fortawesome/fontawesome-free/css/all.min.css";
-@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;500;700&family=Raleway:wght@300;400;500;600&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Inconsolata:wght@500&family=Montserrat:wght@300;400;700&family=Source+Sans+Pro:wght@300;400;700&display=swap");
 :root {
   --bs-blue: #0d6efd;
   --bs-indigo: #6610f2;
@@ -4380,7 +4380,7 @@ textarea.form-control-lg {
   color: #fff;
 }
 .navbar-dark .navbar-nav .nav-link {
-  color: rgba(255, 255, 255, 0.55);
+  color: rgba(255, 255, 255, 0.7);
 }
 .navbar-dark .navbar-nav .nav-link:hover, .navbar-dark .navbar-nav .nav-link:focus {
   color: rgba(255, 255, 255, 0.75);
@@ -4393,14 +4393,14 @@ textarea.form-control-lg {
   color: #fff;
 }
 .navbar-dark .navbar-toggler {
-  color: rgba(255, 255, 255, 0.55);
+  color: rgba(255, 255, 255, 0.7);
   border-color: rgba(255, 255, 255, 0.1);
 }
 .navbar-dark .navbar-toggler-icon {
-  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%28255, 255, 255, 0.55%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%28255, 255, 255, 0.7%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
 }
 .navbar-dark .navbar-text {
-  color: rgba(255, 255, 255, 0.55);
+  color: rgba(255, 255, 255, 0.7);
 }
 .navbar-dark .navbar-text a,
 .navbar-dark .navbar-text a:hover,
@@ -11122,118 +11122,177 @@ textarea.form-control-lg {
   }
 }
 :root {
-  --font-size: calc((16px + (19 - 16) * ((100vw - 300px) / (1600 - 300))));
-  --font-family-1: "Raleway", sans-serif;
-  --font-family-2: "Open Sans", sans-serif;
+  --font-size: calc((16px + (18 - 16) * ((100vw - 300px) / (1600 - 300))));
+  --montserrat: "Montserrat", sans-serif;
+  --source-sans-pro: "Source Sans Pro", sans-serif;
+  --number: "Inconsolata", monospace;
 }
 
-.navbar-brand {
-  font-family: var(--font-family-1);
-  font-size: calc(20px + 5 * (100vw - 300px) / 1300);
+.navbar {
+  backdrop-filter: blur(11px) saturate(180%);
+  -webkit-backdrop-filter: blur(11px) saturate(180%);
 }
 
-.nav-link {
-  font-family: var(--font-family-2);
+.nav-link,
+.dropdown-item {
+  color: #ffffff;
   font-size: var(--font-size);
+  font-family: var(--montserrat);
+  letter-spacing: 0.26rem;
 }
 
-.mainsection {
-  margin-top: 35px;
-}
-
-.hero-title {
-  font-size: calc(30px + 15 * (100vw - 300px) / 1300);
-  font-family: "Raleway", sans-serif;
-  text-transform: capitalize;
-  line-height: 63px;
-  margin-bottom: 56px;
-  font-weight: 700;
+.dropdown-item {
   letter-spacing: 0.2rem;
 }
 
-.main-text {
-  font-size: var(--font-size);
-  text-align: start;
-  letter-spacing: 0.08rem;
-  word-spacing: 0.15rem;
-  word-wrap: normal;
-  line-height: calc(var(--font-size) * 2);
-  font-family: var(--font-family-2);
-  margin-bottom: 35px;
+.nav-link:active,
+.nav-link:focus,
+.nav-link:hover {
+  color: #ffffffd0;
 }
 
-.btn {
-  padding: 10px 0px;
-  font-weight: 600;
-  font-family: var(--font-family-1);
-}
-
-.sec-title {
+.navbar-brand {
+  color: black;
   font-size: calc(20px + 10 * (100vw - 300px) / 1300);
+  font-family: var(--montserrat);
+  letter-spacing: 0.4rem;
+  font-weight: 600;
+  text-shadow: -1px -1px 0 #ffffff, 1px -1px 0 #ffffff, -1px 1px 0 #ffffff, 1px 1px 0 #ffffff;
 }
 
-.image_bg {
-  background-image: url(../images/blob.svg);
-  background-size: cover;
-  background-position: center;
-  width: 100%;
+.navbar-brand:hover,
+.navbar-brand:active,
+.navbar-brand:focus {
+  color: black;
+  text-shadow: -1px -1px 0 #ffffffc4, 1px -1px 0 #ffffffc4, -1px 1px 0 #ffffffc4, 1px 1px 0 #ffffffc4;
+}
+
+.image-container {
+  height: 580px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  overflow: hidden;
+}
+
+.shade {
+  position: absolute;
+  width: 550px;
   height: 550px;
-  padding: 20px;
-  z-index: 99;
+  background-color: rgba(255, 255, 255, 0.226);
+  filter: blur(35px) brightness(40%);
+  border-radius: 50%;
+  bottom: -50%;
+  z-index: 2;
 }
 
-.png {
-  border-radius: 5%;
-  width: 60%;
+.logo {
+  color: black;
 }
 
-.pattern_top {
+.credit-cotainer {
+  backdrop-filter: blur(18px) saturate(200%);
+  -webkit-backdrop-filter: blur(18px) saturate(200%);
+  border-radius: 12px;
+  border: 2px solid rgba(209, 213, 219, 0.3);
+  padding: 15px;
+  width: 100%;
+  transform: rotateX(-55deg) rotate(-20deg) skewX(35deg);
+}
+
+.c-1 {
+  width: 80px;
+  height: 80px;
+  border-radius: 50%;
+  background: #910000;
+}
+
+.c-2 {
+  width: 80px;
+  height: 80px;
+  border-radius: 50%;
+  background: rgba(150, 150, 0, 0.822);
+  margin-left: -20px;
+}
+
+.credit-cotainer-one {
+  background-color: rgba(0, 0, 0, 0.7);
+  position: relative;
+  z-index: 5;
+}
+
+.credit-cotainer-three {
+  background-color: rgba(0, 63, 136, 0.705);
   position: absolute;
-  display: block;
-  background-color: white;
-  width: 25%;
-  top: 0;
-  right: 0;
-  height: 25%;
-  background-image: radial-gradient(black 5px, transparent 5px);
-  background-size: 15px 15px;
-  clip-path: polygon(0 0, 100% 0, 100% 100%, 72% 100%, 72% 32%, 0 32%);
+  margin-top: 220px;
+  z-index: 3;
 }
 
-.pattern_bottom {
+.credit-cotainer-two {
+  background-color: rgba(131, 0, 0, 0.705);
   position: absolute;
-  display: block;
-  background-color: white;
-  width: 25%;
-  bottom: 0;
-  left: 0;
-  height: 25%;
-  background-image: radial-gradient(black 5px, transparent 5px);
-  background-size: 15px 15px;
-  clip-path: polygon(28% 0, 28% 70%, 100% 70%, 100% 100%, 0 100%, 0 0);
+  margin-top: 120px;
+  z-index: 4;
 }
 
-.nav_icons > i {
-  font-size: 18px;
+.number,
+.date {
+  font-size: calc(16px + 2 * (100vw - 300px) / 1300);
+  font-family: "Inconsolata", monospace;
 }
 
-@media (max-width: 767.98px) {
-  .png {
-    width: 65%;
-  }
+.h2 {
+  font-family: var(--montserrat);
+  font-size: calc(30px + 15 * (100vw - 300px) / 1300);
+  font-weight: 600;
+  text-shadow: -2px -2px 0 #ffffff, 2px -2px 0 #ffffff, -2px 2px 0 #ffffff, 2px 2px 0 #ffffff;
+  letter-spacing: 0.4rem;
+  margin-top: 60px;
+  margin-bottom: 37.0828182942px;
 }
+
+.content-text {
+  font-family: var(--source-sans-pro);
+  font-size: var(--font-size);
+  letter-spacing: 0.15rem;
+  line-height: calc(var(--font-size) * 1.8);
+  word-spacing: 0.3rem;
+}
+
+/* backdrop-filter: blur(15px) saturate(200%);
+-webkit-backdrop-filter: blur(15px) saturate(200%);
+background-color: rgba(255, 255, 255, 0.5);
+border-radius: 12px;
+border: 1px solid rgba(209, 213, 219, 0.3);*/
 @media (max-width: 575.98px) {
-  .png {
-    width: 100%;
+  .credit-cotainer {
+    transform: rotateX(-50deg) rotate(-30deg) skewX(10deg);
+    padding: 6px;
+    width: 70%;
   }
 
-  .image_bg {
-    background-image: none;
-    height: max-content;
+  .c-1 {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    background: #910000;
   }
 
-  .main-text {
-    text-indent: 4rem;
+  .c-2 {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    background: rgba(150, 150, 0, 0.822);
+    margin-left: -20px;
+  }
+
+  .image-container {
+    height: 400px;
+  }
+
+  .shade {
+    bottom: -60%;
   }
 }
 
